# tax_document_processor

./: .gitignore  2025_Tax_Return_Double_Check.xlsx  25_1040.xlsx  AGENTS.md  CONTEXT.md  README.md  SETUP.md  app.py  app_logging.py  bedrock_client.py  build.bat  build.sh  build.spec  build_mac.spec  pipeline.py  requirements-dev.txt  requirements.txt  run.sh  settings.py
Epics/: README.md
Epics/01_Bedrock/: 01_auth.md  02_schema.md  03_prompt_parity.md  04_region_zdr.md  05_live_validation.md  epic.md
Epics/02_UI/: 01_shell.md  02_reviewer_mode.md  03_settings.md  04_reviewer_corrections.md  05_staff_workflow_feedback.md  06_frontend_tests.md  07_output_hierarchy_customization.md  08_web_style_ui_port.md  epic.md
Epics/03_Packaging/: 01_installer.md  02_autoupdate.md  03_code_signing.md  epic.md
Epics/04_Tenant/: 01_org.md  02_office_accounts.md  03_usage.md  epic.md
Epics/05_Architecture/: 01_decision_spike.md  epic.md  (+2 more)
docs/: AI_DEVELOPMENT.md  ARCHITECTURE.md  BEDROCK_SETUP.md  CONFIGURATION.md  DEVELOPMENT.md  QUICKSTART.md  STATUS.md  TROUBLESHOOTING.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
tests/: run_all_tests.sh  run_tests.py  run_whitfield.py  smoke_bedrock.py  test_logic.py  test_react_frontend_static.py  test_ui_prototype_static.py  test_ui_static.py
ui_prototype/: README.md  app.js  index.html  styles.css
(+30 files in other folders)
