[package]
name = "tax-document-processor"
version = "0.1.0"
description = "Tax Document Processor desktop shell spike"
authors = ["Tax Document Processor"]
edition = "2021"

[lib]
name = "tax_document_processor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
